parser/src/test/resources/corpus/valid/22_let_boolean.ff
rule "Let Boolean" {
  let both = a and b
  let either = a or b
  let inverse = not a
}
