parser/src/test/resources/corpus/invalid/60_compare_chained.ff
rule "Leading Compare" {
  let x = < a
}
